# sekoia-learning

./: README.md  action_getweatheraction.json  main.py  manifest.json  pyproject.toml
tests/: test_get_weather_action.py
weather_modules/: __init__.py  get_weather_action.py  models.py
